# GPU_2DIsing

./: .gitignore  Makefile  README.md  calculate_committor.cu  gpu_tools.cu  gpu_tools.h  io.c  io.h  ising.cu  mc_cpu.c  mc_cpu.h  mc_gpu.cu  mc_gpu.h  meson.build  parser.c  parser.h  pyproject.toml  test_bits.cu  vis_gridstates.py
Jupyter/: GASP_Tests.ipynb  GASP_rates.ipynb  GASP_test_grid_filter.ipynb
include/: bootstrap.h  gpu_tools.h  grid.h  io.h  mc_cpu.h  mc_gpu.h
src/: bootstrap.c  gpu_tools.cu  grid.c  io.c  ising.cu  ising_ext.cu  mc_cpu.c  mc_gpu.cu  meson.build  mt19937ar.c
tools/: vis_gridstates.py
